221123 버튼들 자리 찾아놓기

--- a/index.html
+++ b/index.html
@@ -7,41 +7,18 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;500;700;900&family=Roboto:wght@100;300;400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
-    <script
-      src="https://code.jquery.com/jquery-3.6.1.min.js"
-      integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
-      crossorigin="anonymous"
-    ></script>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.min.css"
-      integrity="sha512-q54FvbV+gGBn+NvgaD4gpJ7w4wrO00DgW7Rx503PIhrf0CuMwLOwbS+bXgOBFSob+6GVy1HDPfaRLJ8w2jiS4g=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.min.js"
-      integrity="sha512-bxzECOBohzcTcWocMAlNDE2kYs0QgwGs4eD8TlAN2vfovq13kfDfp95sJSZrNpt0VMkpP93ZxLC/+WN/7Trw2g=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;500;700;900&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.min.css" integrity="sha512-q54FvbV+gGBn+NvgaD4gpJ7w4wrO00DgW7Rx503PIhrf0CuMwLOwbS+bXgOBFSob+6GVy1HDPfaRLJ8w2jiS4g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.min.js" integrity="sha512-bxzECOBohzcTcWocMAlNDE2kYs0QgwGs4eD8TlAN2vfovq13kfDfp95sJSZrNpt0VMkpP93ZxLC/+WN/7Trw2g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <title>KISA 한국인터넷진흥원</title>
   </head>
   <body>
     <header>
       <div class="header_wrapper">
         <div class="logo">
-          <a href="#"
-            ><img src="img/logo/logo_w.png" alt="logo" class="logoImg"
-          /></a>
+          <a href="#"><img src="img/logo/logo_w.png" alt="logo" class="logoImg" /></a>
         </div>
         <ul class="header_menu">
           <li class="depth1">
@@ -233,8 +210,7 @@
             <div class="slide_text container">
               <p class="slide_p">Korea Internet & Security Agency</p>
               <p class="main_slide_p">
-                [<span class="slide_blue">KISA</span>]는 <br />안전하고 신뢰할
-                수 있는<br />
+                [<span class="slide_blue">KISA</span>]는 <br />안전하고 신뢰할 수 있는<br />
                 <span class="slide_green">디지털 미래사회</span>를 선도합니다
               </p>
             </div>
@@ -265,40 +241,28 @@
               <div class="slide_text_small">
                 <div class="small_slider">
                   <p>01. 사이버침해대응본부</p>
-                  <span
-                    >사이버 위협으로부터 국가와 국민의 안전을
-                    지키겠습니다.</span
-                  >
+                  <span>사이버 위협으로부터 국가와 국민의 안전을 지키겠습니다.</span>
                   <div class="second_slide_bottom">
                     <a href="#">자세히 보기</a>
                   </div>
                 </div>
                 <div class="small_slider">
                   <p>02. 사이버침해대응본부</p>
-                  <span
-                    >사이버 위협으로부터 국가와 국민의 안전을
-                    지키겠습니다.</span
-                  >
+                  <span>사이버 위협으로부터 국가와 국민의 안전을 지키겠습니다.</span>
                   <div class="second_slide_bottom">
                     <a href="#">자세히 보기</a>
                   </div>
                 </div>
                 <div class="small_slider">
                   <p>03. 사이버침해대응본부</p>
-                  <span
-                    >사이버 위협으로부터 국가와 국민의 안전을
-                    지키겠습니다.</span
-                  >
+                  <span>사이버 위협으로부터 국가와 국민의 안전을 지키겠습니다.</span>
                   <div class="second_slide_bottom">
                     <a href="#">자세히 보기</a>
                   </div>
                 </div>
                 <div class="small_slider">
                   <p>04. 사이버침해대응본부</p>
-                  <span
-                    >사이버 위협으로부터 국가와 국민의 안전을
-                    지키겠습니다.</span
-                  >
+                  <span>사이버 위협으로부터 국가와 국민의 안전을 지키겠습니다.</span>
                   <div class="second_slide_bottom">
                     <a href="#">자세히 보기</a>
                   </div>
@@ -334,9 +298,7 @@
             <div class="second_slide_small2">
               <ul>
                 <li>
-                  <a href="#"
-                    ><img src="img/main/img_hacking_02.jpg" alt="hacking"
-                  /></a>
+                  <a href="#"><img src="img/main/img_hacking_02.jpg" alt="hacking" /></a>
                 </li>
               </ul>
             </div>
@@ -348,51 +310,37 @@
               <h2 class="kisa_text">주요서비스</h2>
             </div>
             <div class="service_slider">
+              <div class="service_btn_wrapper">
+                <div class="prev"><</div>
+                <div class="next">></div>
+              </div>
               <ul>
                 <li class="service_item">
-                  <a href="#">
-                    <img src="img/main/icon1.png" /> <span>내PC돌보미</span></a
-                  >
+                  <a href="#"> <img src="img/main/icon1.png" /> <span>내PC돌보미</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#">
-                    <img src="img/main/icon1.png" /> <span>내PC돌보미</span></a
-                  >
+                  <a href="#"> <img src="img/main/icon1.png" /> <span>내PC돌보미</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#">
-                    <img src="img/main/icon1.png" /> <span>내PC돌보미</span></a
-                  >
+                  <a href="#"> <img src="img/main/icon1.png" /> <span>내PC돌보미</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#">
-                    <img src="img/main/icon1.png" /> <span>내PC돌보미</span></a
-                  >
+                  <a href="#"> <img src="img/main/icon1.png" /> <span>내PC돌보미</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#">
-                    <img src="img/main/icon1.png" /> <span>내PC돌보미</span></a
-                  >
+                  <a href="#"> <img src="img/main/icon1.png" /> <span>내PC돌보미</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#">
-                    <img src="img/main/icon1.png" /> <span>내PC돌보미</span></a
-                  >
+                  <a href="#"> <img src="img/main/icon1.png" /> <span>내PC돌보미</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#">
-                    <img src="img/main/icon1.png" /> <span>내PC돌보미</span></a
-                  >
+                  <a href="#"> <img src="img/main/icon1.png" /> <span>내PC돌보미</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#">
-                    <img src="img/main/icon1.png" /> <span>내PC돌보미</span></a
-                  >
+                  <a href="#"> <img src="img/main/icon1.png" /> <span>내PC돌보미</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#">
-                    <img src="img/main/icon1.png" /> <span>내PC돌보미</span></a
-                  >
+                  <a href="#"> <img src="img/main/icon1.png" /> <span>내PC돌보미</span></a>
                 </li>
               </ul>
             </div>
