--- a/index.html
+++ b/index.html
@@ -362,11 +362,37 @@
       </section>
       <section class="section third">3</section>
     </div>
+    <section class="section fp-auto-height">
+      <footer>
+        <div class="footer_intro">
+          <ul class="left">
+            <li><a href="#">개인정보 처리방침</a></li>
+            <li><a href="#">RSS</a></li>
+            <li><a href="#">웹접근성 도움말</a></li>
+            <li><a href="#">해킹,스팸개인정보침해 신고는 118</a></li>
+          </ul>
+          <div class="right">
+            <ul>
+              <li>KISA소개 자료</li>
+              <li><a href="#">KR</a></li>
+              <li><a href="#">ENG</a></li>
+              <ul class="sns">
+                <li>SNS</li>
+                <li><i class="ri-kakao-talk-fill"></i></li>
+                <li><i class="ri-youtube-fill"></i></li>
+                <li><i class="ri-message-2-fill"></i></li>
+                <li><i class="ri-facebook-fill"></i></li>
+              </ul>
+            </ul>
+          </div>
+        </div>
+      </footer>
+    </section>
     <script src="./js/common.js"></script>
     <script>
       $(function () {
         $("#fullpage").fullpage({
-          anchors: ["#section1", "#section2", "#section3"],
+          anchors: ["#section1", "#section2", "#section3", "#section4"],
           slideNavigation: true,
           navigation: true,
           navigationPosition: "right",
