221125 포토 뉴스 작업 중

--- a/index.html
+++ b/index.html
@@ -360,34 +360,76 @@
           </div>
         </div>
       </section>
-      <section class="section third">3</section>
-    </div>
-    <section class="section fp-auto-height">
-      <footer>
-        <div class="footer_intro">
-          <ul class="left">
-            <li><a href="#">개인정보 처리방침</a></li>
-            <li><a href="#">RSS</a></li>
-            <li><a href="#">웹접근성 도움말</a></li>
-            <li><a href="#">해킹,스팸개인정보침해 신고는 118</a></li>
-          </ul>
-          <div class="right">
-            <ul>
-              <li>KISA소개 자료</li>
-              <li><a href="#">KR</a></li>
-              <li><a href="#">ENG</a></li>
-              <ul class="sns">
-                <li>SNS</li>
-                <li><i class="ri-kakao-talk-fill"></i></li>
-                <li><i class="ri-youtube-fill"></i></li>
-                <li><i class="ri-message-2-fill"></i></li>
-                <li><i class="ri-facebook-fill"></i></li>
-              </ul>
-            </ul>
+      <section class="section third">
+        <div class="container">
+          <div class="third_title">
+            <h5>News</h5>
+            <h1>알림마당</h1>
+          </div>
+          <div class="notice_top">
+            <article class="notice">notice</article>
+            <article class="photo_news">
+              <div class="sub_title">
+                <h4>포토뉴스</h4>
+                <ul class="tool_box">
+                  <li><i class="ri-arrow-left-s-line"></i></li>
+                  <li><i class="ri-pause-mini-fill"></i></li>
+                  <li><i class="ri-arrow-right-s-line"></i></li>
+                  <li class="more"><i class="ri-add-fill"></i></li>
+                </ul>
+              </div>
+              <div class="news_con">
+                <div class="news_wrap">
+                  <img src="img/main/" alt="" />
+                  <p></p>
+                </div>
+                <div class="news_wrap">
+                  <img src="" alt="" />
+                  <p></p>
+                </div>
+              </div>
+            </article>
           </div>
         </div>
-      </footer>
-    </section>
+      </section>
+      <section class="section fp-auto-height">
+        <footer>
+          <div class="footer_intro">
+            <div class="container">
+              <ul class="left">
+                <li><a href="#">개인정보 처리방침</a></li>
+                <li><a href="#">RSS</a></li>
+                <li><a href="#">웹접근성 도움말</a></li>
+                <li><a href="#">해킹,스팸개인정보침해 신고는 118</a></li>
+              </ul>
+              <div class="right">
+                <ul>
+                  <li><span>KISA소개 자료</span></li>
+                  <li><a href="#">KR</a></li>
+                  <li><a href="#">ENG</a></li>
+                  <ul class="sns">
+                    <li>SNS</li>
+                    <li>
+                      <a href="#"><i class="ri-kakao-talk-fill"></i></a>
+                    </li>
+                    <li>
+                      <a href="#"><i class="ri-youtube-fill"></i></a>
+                    </li>
+                    <li>
+                      <a href="#"><i class="ri-message-2-fill"></i></a>
+                    </li>
+                    <li>
+                      <a href="#"><i class="ri-facebook-fill"></i></a>
+                    </li>
+                  </ul>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </footer>
+      </section>
+    </div>
+
     <script src="./js/common.js"></script>
     <script>
       $(function () {
