221125 알림판 작업 중

--- a/index.html
+++ b/index.html
@@ -380,12 +380,51 @@
               </div>
               <div class="news_con">
                 <div class="news_wrap">
-                  <img src="img/main/" alt="" />
-                  <p></p>
+                  <img src="img/main/photonews1.jpg" alt="photonews1" />
+                  <p>KISA, 세계적 석학과 '데이터 리더십 미팅' 가져</p>
                 </div>
                 <div class="news_wrap">
-                  <img src="" alt="" />
-                  <p></p>
+                  <img src="img/main/photonews2.jpg" alt="pho" />
+                  <p>KISA, 이전 공공기관 노사 공동 지역 유기동물 보호 기부금 전달</p>
+                </div>
+              </div>
+            </article>
+          </div>
+          <div class="notice_bottom">
+            <article class="society_tab">
+              <div class="sub_title">
+                <h4>사회 공헌</h4>
+              </div>
+              <div class="society_wrap">
+                <img src="img/main/society.jpg" alt="society_img" />
+              </div>
+            </article>
+            <article class="sns_tab">
+              <div class="sub_title">
+                <h4>SNS</h4>
+              </div>
+              <div class="sns_wrap">
+                <ul>
+                  <li><img src="img/main/ic_sns_youtube.png" alt="society_img" /></li>
+                  <li><img src="img/main/ic_sns_kakao.png" alt="society_img" /></li>
+                  <li><img src="img/main/ic_sns_blog.png" alt="society_img" /></li>
+                  <li><img src="img/main/ic_sns_facebook.png" alt="society_img" /></li>
+                </ul>
+              </div>
+            </article>
+            <article class="photo_news notice">
+              <div class="sub_title">
+                <h4>알림판</h4>
+                <ul class="tool_box">
+                  <li><i class="ri-arrow-left-s-line"></i></li>
+                  <li><i class="ri-pause-mini-fill"></i></li>
+                  <li><i class="ri-arrow-right-s-line"></i></li>
+                  <li class="more"><i class="ri-add-fill"></i></li>
+                </ul>
+              </div>
+              <div class="notice_tab">
+                <div class="notice_wrap">
+                  <img src="img/main/notice.png" alt="photonews1" />
                 </div>
               </div>
             </article>
