221125 알림마당 배치하기

--- a/index.html
+++ b/index.html
@@ -412,8 +412,8 @@
                 </ul>
               </div>
             </article>
-            <article class="photo_news notice">
-              <div class="sub_title">
+            <article class="notice_photo">
+              <div class="sub_title thin">
                 <h4>알림판</h4>
                 <ul class="tool_box">
                   <li><i class="ri-arrow-left-s-line"></i></li>
