--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
           <div class="notice_top">
             <article class="notice">notice</article>
             <article class="photo_news">
-              <div class="sub_title">
+              <div class="sub_title thin">
                 <h4>포토뉴스</h4>
                 <ul class="tool_box">
                   <li><i class="ri-arrow-left-s-line"></i></li>
