--- a/index.html
+++ b/index.html
@@ -367,7 +367,44 @@
             <h1>알림마당</h1>
           </div>
           <div class="notice_top">
-            <article class="notice">notice</article>
+            <article class="notice">
+              <ul class="notice_menu_list">
+                <li><a href="#">전체보기</a></li>
+                <li><a href="#">공지사항</a></li>
+                <li><a href="#">보도자료</a></li>
+                <li><a href="#">채용정보</a></li>
+                <li><a href="#">입찰공고</a></li>
+              </ul>
+              <ul class="tool_box">
+                <li class="more"><i class="ri-add-fill"></i></li>
+              </ul>
+              <ul class="notice_list">
+                <li>
+                  <a href="#">2022년도 하반기 한국인터넷진흥원 정규직 공개채용</a>
+                  <div>2022.10.14</div>
+                </li>
+                <li>
+                  <a href="#">2022년도 하반기 한국인터넷진흥원 정규직 공개채용</a>
+                  <div>2022.10.14</div>
+                </li>
+                <li>
+                  <a href="#">2022년도 하반기 한국인터넷진흥원 정규직 공개채용</a>
+                  <div>2022.10.14</div>
+                </li>
+                <li>
+                  <a href="#">2022년도 하반기 한국인터넷진흥원 정규직 공개채용</a>
+                  <div>2022.10.14</div>
+                </li>
+                <li>
+                  <a href="#">2022년도 하반기 한국인터넷진흥원 정규직 공개채용</a>
+                  <div>2022.10.14</div>
+                </li>
+                <li>
+                  <a href="#">2022년도 하반기 한국인터넷진흥원 정규직 공개채용</a>
+                  <div>2022.10.14</div>
+                </li>
+              </ul>
+            </article>
             <article class="photo_news">
               <div class="sub_title thin">
                 <h4>포토뉴스</h4>
