221128 알림마당 공지사항 밑작업

--- a/index.html
+++ b/index.html
@@ -368,16 +368,18 @@
           </div>
           <div class="notice_top">
             <article class="notice">
-              <ul class="notice_menu_list">
-                <li><a href="#">전체보기</a></li>
-                <li><a href="#">공지사항</a></li>
-                <li><a href="#">보도자료</a></li>
-                <li><a href="#">채용정보</a></li>
-                <li><a href="#">입찰공고</a></li>
-              </ul>
-              <ul class="tool_box">
-                <li class="more"><i class="ri-add-fill"></i></li>
-              </ul>
+              <div class="notice_tool">
+                <ul class="notice_menu_list">
+                  <li><a href="#">전체보기</a></li>
+                  <li><a href="#">공지사항</a></li>
+                  <li><a href="#">보도자료</a></li>
+                  <li><a href="#">채용정보</a></li>
+                  <li><a href="#">입찰공고</a></li>
+                </ul>
+                <ul class="tool_box">
+                  <li class="more"><i class="ri-add-fill"></i></li>
+                </ul>
+              </div>
               <ul class="notice_list">
                 <li>
                   <a href="#">2022년도 하반기 한국인터넷진흥원 정규직 공개채용</a>
