221128 알림마당 공지사항 작업

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
             <article class="notice">
               <div class="notice_tool">
                 <ul class="notice_menu_list">
-                  <li><a href="#">전체보기</a></li>
+                  <li class="active"><a href="#">전체보기</a></li>
                   <li><a href="#">공지사항</a></li>
                   <li><a href="#">보도자료</a></li>
                   <li><a href="#">채용정보</a></li>
