--- a/index.html
+++ b/index.html
@@ -207,21 +207,33 @@
         <ul class="main_slide_wrapper">
           <li class="main_slide1 active">
             <img src="img/main/main_slide_01.jpg" alt="1" />
-            <div class="slide_text container">
-              <p class="slide_p">Korea Internet & Security Agency</p>
+            <div class="slide_text">
+              <span class="slide_p">Korea Internet & Security Agency</span>
               <p class="main_slide_p">
-                [<span class="slide_blue">KISA</span>]는 <br />안전하고 신뢰할 수 있는<br />
-                <span class="slide_green">디지털 미래사회</span>를 선도합니다
+                [<span class="slide_blue">KISA</span>]는 <br />안전하고 신뢰할수 있는<br />
+                <span class="slide_green">디지털 미래사회</span>를 선도합니다.
               </p>
             </div>
           </li>
           <li class="main_slide2">
             <img src="img/main/main_slide_02.jpg" alt="2" />
-            <p>Korea Internet & Security Agency</p>
+            <div class="slide_text">
+              <span class="slide_p">Korea Internet & Security Agency</span>
+              <p class="main_slide_p">
+                [<span class="slide_blue">KISA</span>]와 <br />함께 가꾸는 미래 인터넷<br />
+                <span class="slide_green">함께 꿈꾸는 안전한 세상</span>
+              </p>
+            </div>
           </li>
           <li class="main_slide3">
             <img src="img/main/main_slide_03.jpg" alt="3" />
-            <p>Korea Internet & Security Agency</p>
+            <div class="slide_text">
+              <span class="slide_p">Korea Internet & Security Agency</span>
+              <p class="main_slide_p">
+                <span class="slide_green">안전한 디지털 미래</span>
+                [<span class="slide_blue">KISA</span>]가 <br />함께 합니다.<br />
+              </p>
+            </div>
           </li>
         </ul>
       </section>
