221128 슬라이드 스위치 생성

--- a/index.html
+++ b/index.html
@@ -230,11 +230,16 @@
             <div class="slide_text">
               <span class="slide_p">Korea Internet & Security Agency</span>
               <p class="main_slide_p">
-                <span class="slide_green">안전한 디지털 미래</span>
-                [<span class="slide_blue">KISA</span>]가 <br />함께 합니다.<br />
+                <span class="slide_green">안전한 디지털 미래</span><br />
+                [<span class="slide_blue">KISA</span>]가 함께 합니다.<br />
               </p>
             </div>
           </li>
+          <ul class="slidebar container">
+            <li class="prev"><i class="ri-arrow-left-s-line"></i></li>
+            <li class="pause"><i class="ri-pause-mini-fill"></i></li>
+            <li class="next"><i class="ri-arrow-right-s-line"></i></li>
+          </ul>
         </ul>
       </section>
       <section class="section second">
