221128 슬라이드 작업

--- a/index.html
+++ b/index.html
@@ -235,11 +235,37 @@
               </p>
             </div>
           </li>
-          <ul class="slidebar container">
-            <li class="prev"><i class="ri-arrow-left-s-line"></i></li>
-            <li class="pause"><i class="ri-pause-mini-fill"></i></li>
-            <li class="next"><i class="ri-arrow-right-s-line"></i></li>
-          </ul>
+        </ul>
+        <ul class="slidebar container">
+          <li id="mainSlidePrev"><i class="ri-arrow-left-s-line"></i></li>
+          <li id="mainSlidePause"><i class="ri-pause-mini-fill"></i></li>
+          <li id="mainSlideNext"><i class="ri-arrow-right-s-line"></i></li>
+        </ul>
+        <ul class="mainBanner container">
+          <li id="one_sq">
+            <a href="#">
+              <div class="hover_prev"><img src="img/main/hover_prev1.png" alt="" /></div>
+              <div class="hover_img"><img src="img/main/hover_10.png" alt="" /></div>
+            </a>
+          </li>
+          <li id="two_sq">
+            <a href="#">
+              <div class="hover_prev"><img src="img/main/hover_prev2.png" alt="" /></div>
+              <div class="hover_img"><img src="img/main/hover_11.png" alt="" /></div>
+            </a>
+          </li>
+          <li id="three_sq">
+            <a href="#">
+              <div class="hover_prev"><img src="img/main/hover_prev3.png" alt="" /></div>
+              <div class="hover_img"><img src="img/main/hover_12.png" alt="" /></div>
+            </a>
+          </li>
+          <li id="four_sq">
+            <a href="#">
+              <div class="hover_prev"><img src="img/main/hover_prev4.png" alt="" /></div>
+              <div class="hover_img"><img src="img/main/hover_13.png" alt="" /></div>
+            </a>
+          </li>
         </ul>
       </section>
       <section class="section second">
