--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <meta name="author" content="강혜주" />
     <meta name="keyword" content="포트폴리오, 강혜주, 프론트엔드" />
     <meta property="og:title" content="혜주의 포트폴리오" />
-    <meta property="og:description" content="혜주의 포트폴리오" />
-    <meta property="og:url" content="./img/main/img_one.png" />
+    <meta property="og:description" content="혜주의 관공서 포트폴리오" />
+    <meta property="og:url" content="https://hejo47.github.io/KISAweb/" />
+    <meta property="og:image" content="./img/main/img_one.png" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
