--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <a href="#">ESG 열린경영</a>
             <div class="depth2_bg">
               <div class="depth2_wrapper">
-                <h2>알림마당</h2>
+                <h2>ESG 열린경영</h2>
                 <ul class="depth2">
                   <li><a href="#">사전정보공표</a></li>
                   <li><a href="#">정보공개</a></li>
@@ -198,7 +198,7 @@
             <a href="#">KISA 소개</a>
             <div class="depth2_bg">
               <div class="depth2_wrapper">
-                <h2>알림마당</h2>
+                <h2>KISA 소개<</h2>
                 <ul class="depth2">
                   <li><a href="#">기관장 인사말</a></li>
                   <li><a href="#">연혁</a></li>
