221206 헤더 글자간격 수정

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <a href="#">KISA 소개</a>
             <div class="depth2_bg">
               <div class="depth2_wrapper">
-                <h2>KISA 소개<</h2>
+                <h2>KISA 소개</h2>
                 <ul class="depth2">
                   <li><a href="#">기관장 인사말</a></li>
                   <li><a href="#">연혁</a></li>
