221206 메인 슬라이드 코드 줄이기(삼항 연산자)

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
     <div id="fullpage" class="section-container">
       <section class="section first">
         <ul class="main_slide_wrapper">
-          <li class="main_slide1 active">
+          <li class="main_slide1 main_slide_item active">
             <img src="img/main/main_slide_01.jpg" alt="1" />
             <div class="slide_text">
               <span class="slide_p">Korea Internet & Security Agency</span>
@@ -243,7 +243,7 @@
               </p>
             </div>
           </li>
-          <li class="main_slide2">
+          <li class="main_slide2 main_slide_item">
             <img src="img/main/main_slide_02.jpg" alt="2" />
             <div class="slide_text">
               <span class="slide_p">Korea Internet & Security Agency</span>
@@ -253,7 +253,7 @@
               </p>
             </div>
           </li>
-          <li class="main_slide3">
+          <li class="main_slide3 main_slide_item">
             <img src="img/main/main_slide_03.jpg" alt="3" />
             <div class="slide_text">
               <span class="slide_p">Korea Internet & Security Agency</span>
