221207 section2 article1 play

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
             </div>
             <div class="second_slide_small slider">
               <div class="slide_text_small">
-                <div class="small_slider">
+                <div class="small_slider on">
                   <p>01. 사이버침해대응본부</p>
                   <span>사이버 위협으로부터 국가와 국민의 안전을 지키겠습니다.</span>
                   <div class="second_slide_bottom">
@@ -318,22 +318,22 @@
                   </div>
                 </div>
                 <div class="small_slider">
-                  <p>02. 사이버침해대응본부</p>
-                  <span>사이버 위협으로부터 국가와 국민의 안전을 지키겠습니다.</span>
+                  <p>02. 개인정보보호본부</p>
+                  <span>사회 전반의 개인정보보호 역량을 강화하고 안전한 데이터 활용 기반을 조성하겠습니다.</span>
                   <div class="second_slide_bottom">
                     <a href="#">자세히 보기</a>
                   </div>
                 </div>
                 <div class="small_slider">
-                  <p>03. 사이버침해대응본부</p>
-                  <span>사이버 위협으로부터 국가와 국민의 안전을 지키겠습니다.</span>
+                  <p>03. 디지털보안산업본부</p>
+                  <span>정보보호 산업 생태계 조성을 통해 경쟁력 있는 정보보호 기업을 육성하겠습니다.</span>
                   <div class="second_slide_bottom">
                     <a href="#">자세히 보기</a>
                   </div>
                 </div>
                 <div class="small_slider">
-                  <p>04. 사이버침해대응본부</p>
-                  <span>사이버 위협으로부터 국가와 국민의 안전을 지키겠습니다.</span>
+                  <p>04. 디지털기반본부</p>
+                  <span>국민이 편리하게 이용할 수 있는 안정적인 디지털 세상을 만들겠습니다.</span>
                   <div class="second_slide_bottom">
                     <a href="#">자세히 보기</a>
                   </div>
@@ -341,7 +341,7 @@
               </div>
               <div class="btn_wrapper">
                 <div class="prev"><i class="ri-arrow-left-line"></i></div>
-                <div class="pause"><i class="ri-play-fill"></i></div>
+                <div class="play"><i class="ri-play-fill"></i></div>
                 <div class="next"><i class="ri-arrow-right-line"></i></div>
               </div>
             </div>
