--- a/index.html
+++ b/index.html
@@ -394,40 +394,40 @@
                   <a href="#"> <img src="img/main/icon1.png" /> <span>내PC돌보미</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#"> <img src="img/main/icon1.png" /> <span>중소기업홈페이지 보안강화</span></a>
+                  <a href="#"> <img src="img/main/icon2.png" /> <span>중소기업홈페이지 보안강화</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#"> <img src="img/main/icon1.png" /> <span>다중이용 기업서비스 취약점 점검</span></a>
+                  <a href="#"> <img src="img/main/icon3.png" /> <span>다중이용 기업서비스 취약점 점검</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#"> <img src="img/main/icon1.png" /> <span>중소기업 취약점</span></a>
+                  <a href="#"> <img src="img/main/icon4.png" /> <span>중소기업 SW보안 약점 진단</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#"> <img src="img/main/icon1.png" /> <span>내PC돌보미</span></a>
+                  <a href="#"> <img src="img/main/icon5.png" /> <span>사이버보안 빅데이터센터 이용</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#"> <img src="img/main/icon1.png" /> <span>내PC돌보미</span></a>
+                  <a href="#"> <img src="img/main/icon6.png" /> <span>정보보호전문서비스기업</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#"> <img src="img/main/icon1.png" /> <span>내PC돌보미</span></a>
+                  <a href="#"> <img src="img/main/icon7.png" /> <span>정보보호 및 개인정보보호 관리체계 인증</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#"> <img src="img/main/icon1.png" /> <span>내PC돌보미</span></a>
+                  <a href="#"> <img src="img/main/icon8.png" /> <span>클라우드 보안인증</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#"> <img src="img/main/icon1.png" /> <span>내PC돌보미</span></a>
+                  <a href="#"> <img src="img/main/icon9.png" /> <span>융합보안리빙랩</span></a>
+                </li>
+                <li class="service_item">
+                  <a href="#"> <img src="img/main/icon10.png" /> <span>loT보안인증</span></a>
+                </li>
+                <li class="service_item">
+                  <a href="#"> <img src="img/main/icon11.png" /> <span>loT보안 테스트베드</span></a>
+                </li>
+                <li class="service_item">
+                  <a href="#"> <img src="img/main/icon12.png" /> <span>KISA 사이버보안교육</span></a>
                 </li>
               </ul>
             </div>
-            <!-- <div class="swiper mySwiper">
-              <div class="swiper-wrapper">
-                <div class="swiper-slide">1</div>
-                <div class="swiper-slide">2</div>
-                <div class="swiper-slide">3</div>
-              </div>
-              <div class="swiper-button-next"></div>
-              <div class="swiper-button-prev"></div>
-            </div> -->
           </div>
         </div>
       </section>
