--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                   <li class="more"><i class="ri-add-fill"></i></li>
                 </ul>
               </div>
-              <ul class="notice_list">
+              <ul class="notice_list" id="tab_all">
                 <li>
                   <a href="#">2022년도 하반기 한국인터넷진흥원 정규직 공개채용</a>
                   <div>2022.10.14</div>
@@ -482,20 +482,30 @@
               <div class="sub_title thin">
                 <h4>포토뉴스</h4>
                 <ul class="tool_box">
-                  <li><i class="ri-arrow-left-s-line"></i></li>
-                  <li><i class="ri-pause-mini-fill"></i></li>
-                  <li><i class="ri-arrow-right-s-line"></i></li>
+                  <li id="news_prev"><i class="newsicon ri-arrow-left-s-line"></i></li>
+                  <li id="news_pause"><i class="newsicon ri-pause-mini-fill"></i></li>
+                  <li id="news_next"><i class="newsicon ri-arrow-right-s-line"></i></li>
                   <li class="more"><i class="ri-add-fill"></i></li>
                 </ul>
               </div>
               <div class="news_con">
-                <div class="news_wrap">
-                  <img src="img/main/photonews1.jpg" alt="photonews1" />
-                  <p>KISA, 세계적 석학과 '데이터 리더십 미팅' 가져</p>
-                </div>
-                <div class="news_wrap">
-                  <img src="img/main/photonews2.jpg" alt="pho" />
-                  <p>KISA, 이전 공공기관 노사 공동 지역 유기동물 보호 기부금 전달</p>
+                <div class="news">
+                  <div class="news_wrap">
+                    <img src="img/main/photonews1.jpg" alt="photonews1" />
+                    <p>KISA, 세계적 석학과 '데이터 리더십 미팅' 가져</p>
+                  </div>
+                  <div class="news_wrap">
+                    <img src="img/main/photonews2.jpg" alt="photonews2" />
+                    <p>KISA, 이전 공공기관 노사 공동 지역 유기동물 보호 기부금 전달</p>
+                  </div>
+                  <div class="news_wrap">
+                    <img src="img/main/photonews3.jpg" alt="photonews3" />
+                    <p>KISA, 이전 공공기관 노사 공동 지역 유기동물 보호 기부금 전달</p>
+                  </div>
+                  <div class="news_wrap">
+                    <img src="img/main/photonews4.jpeg" alt="photonews4" />
+                    <p>KISA, 이전 공공기관 노사 공동 지역 유기동물 보호 기부금 전달</p>
+                  </div>
                 </div>
               </div>
             </article>
@@ -526,10 +536,10 @@
               <div class="sub_title thin">
                 <h4>알림판</h4>
                 <ul class="tool_box">
-                  <li><i class="ri-arrow-left-s-line"></i></li>
-                  <li><i class="ri-pause-mini-fill"></i></li>
-                  <li><i class="ri-arrow-right-s-line"></i></li>
-                  <li class="more"><i class="ri-add-fill"></i></li>
+                  <li id="notice_prev"><i class="noticeicon ri-arrow-left-s-line"></i></li>
+                  <li id="notice_pause"><i class="noticeicon ri-pause-mini-fill"></i></li>
+                  <li id="notice_next"><i class="noticeicon ri-arrow-right-s-line"></i></li>
+                  <li class="more"><i class="noticeicon ri-add-fill"></i></li>
                 </ul>
               </div>
               <div class="notice_tab">
