221208 알림판 슬라이드 완료

--- a/index.html
+++ b/index.html
@@ -543,8 +543,13 @@
                 </ul>
               </div>
               <div class="notice_tab">
-                <div class="notice_wrap">
-                  <img src="img/main/notice.png" alt="photonews1" />
+                <div class="notice_con">
+                  <div class="notice_wrap">
+                    <img src="img/main/notice.png" alt="notice1" />
+                  </div>
+                  <div class="notice_wrap">
+                    <img src="img/main/notice2.png" alt="notice2" />
+                  </div>
                 </div>
               </div>
             </article>
