--- a/index.html
+++ b/index.html
@@ -441,11 +441,11 @@
             <article class="notice">
               <div class="notice_tool">
                 <ul class="notice_menu_list">
-                  <li class="active"><a href="#">전체보기</a></li>
-                  <li><a href="#">공지사항</a></li>
-                  <li><a href="#">보도자료</a></li>
-                  <li><a href="#">채용정보</a></li>
-                  <li><a href="#">입찰공고</a></li>
+                  <li class="active" onclick="noticeMenuClickHandler(this)"><a href="#">전체보기</a></li>
+                  <li onclick="noticeMenuClickHandler(this)"><a href="#">공지사항</a></li>
+                  <li onclick="noticeMenuClickHandler(this)"><a href="#">보도자료</a></li>
+                  <li onclick="noticeMenuClickHandler(this)"><a href="#">채용정보</a></li>
+                  <li onclick="noticeMenuClickHandler(this)"><a href="#">입찰공고</a></li>
                 </ul>
                 <ul class="tool_box">
                   <li class="more"><i class="ri-add-fill"></i></li>
